fix overflow problem in search bar.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -15,6 +15,7 @@
   background: #f1f1f1;
   border-bottom: solid 1px #e5e5e5;
   overflow-y: hidden;
+  min-width: 1000px;
 }
 
 .sidebar {
